--- a/contacto.html
+++ b/contacto.html
@@ -29,7 +29,7 @@
 				<ul>
 					<li class="current"><a href="inicio.html">Inicio</a></li>
 					<li>
-						<a href="#">Menú</a>
+						<a href="menu.html">Menú</a>
 						<ul>
 							<li><a href="#">Bebidas</a></li>
 							<li><a href="#">Comida</a></li>
